GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.21alpha15 :
      
        - dumpykota filtering capabilities are now supported within
          the LDAP backend too.
          
    - 1.21alpha14 :
    
        - dumpykota now supports extended filtering possibilities
          with the PostgreSQL backend (LDAP support will come soon).
          
    - 1.21alpha13 :
    
        - Added a --debug command line option to pkpgcounter, so
          that people may see what really happens, and what will
          be available in the future :-)
          
    - 1.21alpha12 :
    
        - Fixed a bug with non standard pkbanner command lines.
        
        - Now logs as errors the differences between precomputed and 
          computed job sizes. **CUPS only for now**
          
    - 1.21alpha11 :
    
        - Now user and group print quota entries can be stored directly
          below the user or group with the LDAP backend, using them
          as branches. Thanks to Stefan Wold for the patch.
          See the sample configuration file for details.
          
        - TLS is now supported with the LDAP backend. Thanks to Stefan
          Wold for the patch.
          See the sample configuration file for details.
          
        - edpkota now accepts the -U | --used value command line argument
          to preset the page counters to an initial value. Thanks to
          Wilson Roberto Afonso and Matt Hyclak for the patch.
          
    - 1.21alpha10 :
    
        - Now automatically reconnects up to three times if the LDAP server
          returned an error, possibly due to a timeout.
          
    - 1.21alpha9 :
    